# kiro-gateway

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
.serena/: project.yml
kiro/: __init__.py  account_manager.py  auth.py  cache.py  config.py  converters_anthropic.py  converters_core.py  converters_openai.py  debug_middleware.py  http_client.py  mcp_tools.py  model_resolver.py  models_anthropic.py  models_openai.py  routes_anthropic.py  routes_openai.py  streaming_anthropic.py  streaming_openai.py  streaming_responses.py
tests/unit/: test_auth_manager.py  test_cache.py  test_config.py  test_converters_anthropic.py  test_converters_core.py  test_converters_openai.py  test_mcp_tools.py  test_model_resolver.py  test_models_anthropic.py  test_models_openai.py  test_parsers.py  test_routes_admin.py  test_routes_anthropic.py  test_routes_openai.py  test_streaming_anthropic.py  test_streaming_openai.py
